...
 */
@Composable
fun PdfNameInputDialog(pdfFileName: String, onDismiss: () -> Unit, onConfirm: (String) -> Unit) {
  var inputText by remember { mutableStateOf(pdfFileName) } // Initialized with the default name

  AlertDialog(
      modifier = Modifier.testTag("pdfNameInputDialog"),
      onDismissRequest = onDismiss,
      title = {
        Text(
            "Enter a name for the PDF file that will be generated",
            modifier = Modifier.fillMaxWidth(),
            textAlign = TextAlign.Center)
      },
      text = {
        OutlinedTextField(
            modifier = Modifier.testTag("pdfNameInput"),
            value = inputText,
            onValueChange = { inputText = it },
            label = { Text("PDF File Name") })
      },
      confirmButton = {
        Button(
            modifier = Modifier.testTag("confirmCreatePdfButton"),
            enabled = inputText.isNotEmpty(), // If input text is empty confirm button is disabled
            onClick = { onConfirm(inputText) }) {
              Text("Create PDF")
            }
      },
      dismissButton = {
        Button(onClick = onDismiss, modifier = Modifier.testTag("dismissCreatePdfButton")) {
          Text("Cancel")
        }
      })
}

/**
...
 *
 * @param onAbort Action to be performed when the abort PDF generation button is clicked
 */
@Composable
fun LoadingIndicator(onAbort: () -> Unit) {
  Column(
      modifier = Modifier.fillMaxSize().testTag("loadingIndicator"),
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally) {
        CircularProgressIndicator(
            color = Color.LightGray,
            trackColor = Color.Cyan,
            strokeWidth = 10.dp,
            strokeCap = StrokeCap.Round)
        Spacer(modifier = Modifier.height(16.dp))
        Button(onClick = onAbort, modifier = Modifier.testTag("abortButton")) {
          Text("Abort PDF Generation")
        }
      }
}

/**
...
 * @param onDismiss Action to be performed when the dialog is dismissed
 * @param onConfirm Action to be performed when the dialog is confirmed
 */
@Composable
fun InfoWindow(title: String, text: String, onDismiss: () -> Unit, onConfirm: () -> Unit) {
  AlertDialog(
      modifier = Modifier.testTag("infoWindow"),
      onDismissRequest = onDismiss,
      title = {
        Text(
            title,
            modifier = Modifier.fillMaxWidth().testTag("infoWindowTitle"),
            textAlign = TextAlign.Center)
      },
      text = { Text(text, modifier = Modifier.fillMaxWidth().testTag("infoWindowText")) },
      confirmButton = {
        Button(
            onClick = onConfirm,
            modifier = Modifier.fillMaxWidth().testTag("infoWindowConfirmButton")) {
              Text("Select file")
            }
      },
      dismissButton = {
        Button(
            onClick = onDismiss,
            modifier = Modifier.fillMaxWidth().testTag("infoWindowDismissButton")) {
              Text("Cancel")
            }
      })
}

/**
...
fun SelectSourceFileDialog(
    onDismiss: () -> Unit,
    onDeviceStorageClick: () -> Unit,
    onFoldersClick: () -> Unit
) {
  AlertDialog(
      modifier = Modifier.testTag("selectSourceFileDialog"),
      onDismissRequest = onDismiss,
      title = {
        Text(
            text = "Choose from where to select the source file",
            modifier = Modifier.fillMaxWidth(),
            textAlign = TextAlign.Center)
...
        Column(
            modifier = Modifier.fillMaxWidth(),
            horizontalAlignment = Alignment.CenterHorizontally) {
              // Button to proceed towards selecting a file from the app folders
              Button(
                  onClick = { onFoldersClick() },
                  modifier = Modifier.fillMaxWidth().testTag("appFoldersButton")) {
                    Text("App folders")
                  }
              // Button to launch the file picker
              Button(
                  onClick = { onDeviceStorageClick() },
                  modifier = Modifier.fillMaxWidth().testTag("deviceStorageButton")) {
                    Text("Device storage")
                  }
            }
      },
      confirmButton = {},
      dismissButton = {
        Button(
            onClick = onDismiss,
            modifier = Modifier.fillMaxWidth().testTag("selectSourceFileDismissButton")) {
              Text("Cancel")
            }
      })
}

/**
...
